# Galerkin

./: CMakeLists.txt  main.cpp
include/: base_constant_function.hpp  galerkin_solve.hpp  matrix.hpp
